Pushing code changes to deal with deprecated types and lack of generics.  Fairly clean ant build.